2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Implemented leaving comment.
	Implemented invisible user mode.
	Changed to use quit on disconnect from menu.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crushes when inputted irregular text on current encoding.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Changed encoding defaults, ISO-2022-JP for Japanese, UTF-8 for others.

2007-07-08  Satoshi Nakagawa <artension@gmail.com>

	Added double click servers to connect or disconnect.
	Added double click channels to join or part.

2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed to use AsyncSocket for DCC file sending.
	Cut off needless objc_method.
	Fixed a bug, port should be stored as integer.

2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed type encodings of TcpClient#onSocket_didConnectToHost_port.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Changed to view connecting status of DCC file receiver items.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Replaced all '...' to \U2026 in nib files.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crushes when talk button on whois dialog is pushed two times.

2007-07-04  Satoshi Nakagawa <artension@gmail.com>

	Changed plist filename from _LimeChat.plist to LimeChat.plist on trunk.

2007-07-04  Satoshi Nakagawa <artension@gmail.com>

	Changed to set ENV['RUBYCOCOA_THREAD_HOOK_DISABLE'] on init.

2007-07-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to wrap float return value of getDblTime with NSNumber.

2007-06-29  Satoshi Nakagawa <artension@gmail.com>

	Changed to ignore empty input for input buffer.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>

	Added half-width kana support.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>

	Changed to use objc_alias_method to override methods with objc_method.

2007-06-28  Satoshi Nakagawa <artension@gmail.com>
